--- a/portfolio-details.html
+++ b/portfolio-details.html
@@ -113,16 +113,16 @@
             <div class="portfolio-info">
               <h3>Project information</h3>
               <ul>
-                <li><strong>Category</strong>: Landing page</li>
-                <li><strong>Client</strong>: ASU Company</li>
-                <li><strong>Project date</strong>: 22/07/2021</li>
-                <li><strong>Project URL</strong>: <a target="_blank" href="https://potcastchannel.netlify.app">https://potcastchannel.netlify.app</a></li>
+                <li><strong>Nombre</strong>: potcastchannel</li>
+                <li><strong>Fecha</strong>: 22/07/2021</li>
+                <li><strong>URL</strong>: <a target="_blank" href="https://potcastchannel.netlify.app">https://potcastchannel.netlify.app</a></li>
               </ul>
             </div>
             <div class="portfolio-description">
-              <h2>This is an example of portfolio detail</h2>
+              <h2>Detalles técnicos
+                cnicos</h2>
               <p>
-                Autem ipsum nam porro corporis rerum. Quis eos dolorem eos itaque inventore commodi labore quia quia. Exercitationem repudiandae officiis neque suscipit non officia eaque itaque enim. Voluptatem officia accusantium nesciunt est omnis tempora consectetur dignissimos. Sequi nulla at esse enim cum deserunt eius.
+                Landing page hecha unicamente con HTML y CSS haciendo uso de flexbox  
               </p>
             </div>
           </div>
