--- a/portfolio-details.html
+++ b/portfolio-details.html
@@ -117,7 +117,7 @@
               <ul>
                 <li><strong>Nombre</strong>: potcastchannel</li>
                 <li><strong>Fecha</strong>: 22/07/2021</li>
-                <li><strong>Tecnologías</strong>: 22/07/2021</li>
+                <li><strong>Tecnologías</strong>: HTML | CSS</li>
                 <li><strong>URL</strong>: <a target="_blank" href="https://potcastchannel.netlify.app">https://potcastchannel.netlify.app</a></li>
               </ul>
             </div>
